--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Регистрация</title>
@@ -23,8 +22,7 @@
     <div class="d-flex flex-row align-items-center mb-4">
         <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
         <div class="form-outline flex-fill mb-0">
-            <div class="form-label" style="color:red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">error
-            </div>
+            <div class="form-label" style="color:red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
             <input type="email" th:field="*{email}" id="email" class="form-control"/>
             <label class="form-label" for="email">Ваша почта</label>
         </div>
@@ -32,9 +30,7 @@
     <div class="d-flex flex-row align-items-center mb-4">
         <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
         <div class="form-outline flex-fill mb-0">
-            <div class="form-label" style="color:red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">
-                error
-            </div>
+            <div class="form-label" style="color:red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
             <input type="password" th:field="*{password}" id="password" class="form-control"/>
             <label class="form-label" for="password">Ваш пароль</label>
         </div>
@@ -42,7 +38,7 @@
     <div class="d-flex flex-row align-items-center mb-4">
         <i class="fas fa-key fa-lg me-3 fa-fw"></i>
         <div class="form-outline flex-fill mb-0">
-            <div style="color:red" th:if="${#fields.hasErrors('number')}" th:errors="*{number}">error</div>
+            <div style="color:red" th:if="${#fields.hasErrors('number')}" th:errors="*{number}"></div>
             <input type="password" th:field="*{number}" id="number" class="form-control"/>
             <label class="form-label" for="number">Ваш номер телефона</label>
         </div>
