--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -7,6 +7,7 @@
         </p>
         <p class="mb-1">Сайт для заказа такси в Воронежской области</p>
         <p class="mb-0"><a href="/">На главную</a></p>
+        <p class="mb-0"><a href="/about">О сайте</a></p>
     </div>
 </footer>
 </html>
