--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -11,8 +11,7 @@
 
 <div class="container">
     <div class="py-5 text-center">
-        <h2>Checkout form</h2>
-        <p class="lead">Впишите нужны данные для того чтобы мы могли доставить вам машину как можно быстрее.</p>
+        <h2>Впишите нужны данные для того чтобы мы могли доставить вам машину как можно быстрее.</h2>
     </div>
 
     <div class="row">
